<resources>

    <string name="app_name">ThinkTank</string>
    <string name="action_settings">Settings</string>

    <!-- TTMainActivity -->
    <string name="keyword_input_hint">키워드를 입력하세요.</string>
    <string name="search_keyword">키워드 검색</string>
    <string name="explain_get_keyword_automatically">키워드를 자동 추출합니다.</string>
    <string name="after_get_keyword">추출된 키워드는 %1$s!</string>
    <string name="generate_data">테스트 데이터 생성</string>
    <string name="all_keyword">모든 키워드</string>
    <string name="all_think">모든 메모</string>
    <string name="random_keyword">랜덤 키워드 메모</string>
    <string name="more">더보기</string>
    <string name="wanna_exit">정말로 종료합니까?</string>
    <string name="find_by_date">날짜로 조회하기</string>

    <!-- TTListActivity -->
    <string name="korean_lorem_ipsum">모든 지식의 연장은 의식적인 행동을 무의식으로 바꾸는 것에서 생겨난다.\n알겠지만, 상상력에는 시간 허비가 필요하다. 길고, 비효율적이며 즐거운 게으름, 꾸물거림, 어정거림.</string>
    <string name="action_search">검색</string>
    <string name="with_image">이미지 있음</string>

    <!-- TTDetailActivity -->
    <string name="content_hint">메모를 입력하세요.</string>
    <string name="extract_keyword">키워드 추출</string>
    <string name="take_photo">사진 찍기</string>
    <string name="get_image_from_gallery">갤러리에서 가져오기</string>
    <string name="share_menu">메모 공유</string>
    <string name="delete_menu">메모 삭제</string>
    <string name="no_keyword">키워드가 없습니다.</string>
    <string name="tag_add_content_description">태그 추가</string>
    <string name="share_think">메모 전송</string>
    <string name="cannot_take_photo">사진을 찍을 수 없습니다.</string>
    <string name="no_permission">권한이 거부되었습니다.</string>
    <string name="most_used_keyword">자주 사용하는 키워드</string>
    <string name="default_keyword">기본</string>

    <string name="update_dialog_title">키워드 수정</string>

    <string name="action_menu">메뉴</string>

    <string name="get_record">음성 메모</string>

    <string name="record_ready">잠시만 기다려주세요.</string>
    <string name="record_connected">음성 메모를 시작합니다.</string>

    <!-- AddKeywordDialog -->
    <string name="cannot_add_keyword">최대 3개까지 입력 가능합니다.</string>
    <string name="keyword_edit_text">키워드</string>
    <string name="add_dialog_title">키워드 추가</string>
    <string name="add_dialog_ok">추가</string>
    <string name="dialog_cancel">취소</string>

    <!-- DeleteKeywordDialog -->
    <string name="delete_dialog_title">키워드 삭제</string>
    <string name="text_if_keywords_not_exist">입력된 키워드가 없습니다.</string>
    <string name="delete_dialog_ok">삭제</string>

    <!-- TTRandomMainActivity -->
    <string name="select">조회하기</string>
    <string name="keyword">키워드</string>
    <string name="think">메모</string>
    <string name="select_by_date">날짜</string>
    <string name="generate_randoms">랜덤 단어 생성</string>
    <string name="save">저장하기</string>
    <string name="no_keyword_hint">키워드를 생성하세요.</string>
    <string name="generate_randoms_start">키워드를 생성합니다.</string>

    <string name="on_add_memo">메모가 추가되었습니다.</string>
    <string name="on_update_memo">메모가 수정되었습니다.</string>

</resources>
