<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_tt_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TTDetailActivity">

    <RelativeLayout
        android:padding="@dimen/margin_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/add_tag_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            app:srcCompat="@drawable/icon_tag_add"/>

        <TextView
            android:id="@+id/think_keyword"
            android:layout_toLeftOf="@id/add_tag_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_keyword"
            android:textColor="@color/blue"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/think_content"
            android:layout_below="@id/think_keyword"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:hint="@string/content_hint"
            android:textSize="16sp"
            android:background="@android:color/transparent"
            android:gravity="top"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </RelativeLayout>

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        app:menu_labels_style="@style/MenuLabelsStyle"
        app:menu_labels_showAnimation="@anim/show_from_bottom"
        app:menu_labels_hideAnimation="@anim/hide_to_bottom"
        app:menu_animationDelayPerItem="0"
        app:menu_shadowColor="@color/colorPrimaryDark"
        app:menu_colorNormal="@color/colorPrimary"
        app:menu_colorPressed="@color/colorPrimaryDark"
        app:menu_colorRipple="@color/colorAccent">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_image"
            app:fab_label="@string/image_menu"
            style="@style/MenuButtonsStyle" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/share_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_think_share"
            app:fab_label="@string/share_menu"
            style="@style/MenuButtonsStyle" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_delete_think"
            app:fab_label="@string/delete_menu"
            style="@style/MenuButtonsStyle" />

    </com.github.clans.fab.FloatingActionMenu>

</RelativeLayout>
